spring-petclinic-k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-petclinic
  labels:
    name: spring-petclinic
