spring-petclinic-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: spring-petclinic  # Added namespace
spec:
  type: NodePort
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
